--- a/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackCollectionCard.razor
@@ -1,5 +1,6 @@
 ﻿@inject IJSRuntime js
 @inject NavigationManager navigation
+@inject IPlayerService playerService
 
 <div @ref=Card class="card" @onclick="OpenPage">
     <div class="image-area">
@@ -17,7 +18,14 @@
                 <img src="data:image/png;base64,@PlaylistImages.DefaultImage" />
             }
             <div class="play-button">
-                <i class="fa-solid fa-play"></i>
+                @if (IsPlaying)
+                {
+                    <i class="fa-solid fa-pause"></i>
+                }
+                else
+                {
+                    <i class="fa-solid fa-play"></i>
+                }
             </div>
         </div>
     </div>
@@ -47,35 +55,60 @@
 
     public string? AuthorName { get; set; }
 
+    Guid CollectionId { get; set; }
+
+    bool IsPlaying { get; set; }
+
+    [CascadingParameter(Name = "Collection")]
+    public Guid CurrentPlayingCollectionId { get; set; }
+
+    [CascadingParameter(Name = "IsPaused")]
+    public bool IsPaused { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
-        using (var db = new PlayerContext())
+        InitializeTrackList();
+
+        // using (var db = new PlayerContext())
+        // {
+        //     if (TrackCollection is PlaylistModel)
+        //     {
+        //         TrackCollection = await db.Playlists
+        //                 .Include(p => p.User)
+        //                 .Include(p => p.PlaylistTrack)
+        //                     .ThenInclude(pt => pt.Track)
+        //                 .FirstOrDefaultAsync(p => p.Id == TrackCollection.Id);
+
+        //         if (TrackCollection is not null)
+        //         {
+        //             AuthorName = ((PlaylistModel)TrackCollection).User.Name;
+        //         }
+        //     }
+        //     else if (TrackCollection is AlbumModel)
+        //     {
+        //         TrackCollection = await db.Albums
+        //                .Include(a => a.Artist)
+        //                .Include(a => a.Tracks)
+        //                .FirstOrDefaultAsync(a => a.Id == TrackCollection.Id);
+
+        //         if (TrackCollection is not null)
+        //         {
+        //             AuthorName = ((AlbumModel)TrackCollection).Artist.Name;
+        //         }
+        //     }
+        // }
+
+        playerService.TrackPaused += OnTrackPaused;
+        playerService.TrackPlaying += OnTrackPlaying;
+        playerService.TrackChanged += OnTrackChanged;
+
+        if (CollectionId == CurrentPlayingCollectionId && !IsPaused)
         {
-            if (TrackCollection is PlaylistModel)
-            {
-                TrackCollection = await db.Playlists
-                        .Include(p => p.User)
-                        .Include(p => p.PlaylistTrack)
-                            .ThenInclude(pt => pt.Track)
-                        .FirstOrDefaultAsync(p => p.Id == TrackCollection.Id);
-
-                if (TrackCollection is not null)
-                {
-                    AuthorName = ((PlaylistModel)TrackCollection).User.Name;
-                }
-            }
-            else if (TrackCollection is AlbumModel)
-            {
-                TrackCollection = await db.Albums
-                       .Include(a => a.Artist)
-                       .Include(a => a.Tracks)
-                       .FirstOrDefaultAsync(a => a.Id == TrackCollection.Id);
-
-                if (TrackCollection is not null)
-                {
-                    AuthorName = ((AlbumModel)TrackCollection).Artist.Name;
-                }
-            }
+            IsPlaying = true;
+        }
+        else
+        {
+            IsPlaying = false;
         }
     }
 
@@ -92,5 +125,89 @@
     {
         string path = TrackCollection is AlbumModel ? "album" : "playlist";
         navigation.NavigateTo($"/{path}/{TrackCollection?.Id}");
+    }
+
+
+    private void InitializeTrackList()
+    {
+        if (TrackCollection is not null)
+        {
+            CollectionId = TrackCollection.Id;
+            if (TrackCollection.Type == TrackCollectionType.Album)
+            {
+                InitializeAlbum();
+            }
+            else if (TrackCollection.Type == TrackCollectionType.Playlist)
+            {
+                InitializePlaylist();
+            }
+        }
+    }
+
+    private void InitializeAlbum()
+    {
+        if (TrackCollection is not null)
+        {
+            using (var db = new PlayerContext())
+            {
+                TrackCollection = db.Albums
+                                       .Include(a => a.Artist)
+                                       .FirstOrDefault(a => a.Id == TrackCollection.Id);
+
+                if (TrackCollection is not null)
+                {
+                    AuthorName = ((AlbumModel)TrackCollection).Artist.Name;
+                }
+            }
+        }
+    }
+
+    private void InitializePlaylist()
+    {
+        if (TrackCollection is not null)
+        {
+            using (var db = new PlayerContext())
+            {
+                TrackCollection = db.Playlists
+                                .Include(p => p.User)
+                                .FirstOrDefault(p => p.Id == TrackCollection.Id);
+
+                if (TrackCollection is not null)
+                {
+                    AuthorName = ((PlaylistModel)TrackCollection).User.Name;
+                }
+            }
+        }
+    }
+
+    public void OnTrackPaused(object sender, PlayPauseTrackEventArgs e)
+    {
+        if (CollectionId == e.TrackCollection.Id)
+        {
+            IsPlaying = false;
+        }
+        StateHasChanged();
+    }
+
+    public void OnTrackPlaying(object sender, PlayPauseTrackEventArgs e)
+    {
+        if (CollectionId == e.TrackCollection.Id)
+        {
+            IsPlaying = true;
+        }
+        StateHasChanged();
+    }
+
+    public void OnTrackChanged(object sender, PlayPauseTrackEventArgs e)
+    {
+        if (CollectionId == e.TrackCollection.Id)
+        {
+            IsPlaying = true;
+        }
+        else
+        {
+            IsPlaying = false;
+        }
+        StateHasChanged();
     }
 }
