--- a/MusicPlayer/Spotify/Shared/Trackbar.razor
+++ b/MusicPlayer/Spotify/Shared/Trackbar.razor
@@ -299,7 +299,7 @@
     {
         if (TrackCollection is not null && Track is not null)
         {
-            playerService.Changed(TrackCollection, Track.Id);
+            playerService.Changed(TrackCollection.Id, Track.Id);
         }
     }
 
