--- a/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
+++ b/MusicPlayer/Spotify/Pages/Items/TrackRow.razor
@@ -1,4 +1,5 @@
 ﻿@inject IPlayerService playerService;
+@implements IDisposable
 
 <div class="track-entry" tabindex="-1" @ondblclick="@StartTrack">
     <div class="track-number">
@@ -160,5 +161,11 @@
             IsLoaded = false;
         }
         StateHasChanged();
+    }
+
+    public void Dispose()
+    {
+        playerService.PlayStateChanged -= OnPlayStateChanged;
+        playerService.TrackChanged -= OnTrackChanged;
     }
 }
